--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -4,8 +4,8 @@ allow 102.219.85.85;
 allow 103.106.3.94;
 allow 103.109.101.105;
 allow 103.126.161.54;
+allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -260,7 +260,6 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -627,9 +626,9 @@ allow 193.189.100.201;
 allow 193.189.100.202;
 allow 193.189.100.203;
 allow 193.189.100.204;
+allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
-allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
@@ -806,6 +805,7 @@ allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
+allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -858,6 +858,7 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.160.88.146;
+allow 217.64.148.136;
 allow 23.129.64.130;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -1237,7 +1238,6 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1245,6 +1245,7 @@ allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6c28::1;
 allow 2a05:b0c7:6cd8::1;
+allow 2a05:f480:2400:1441:5400:4ff:fed7:686a;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1255,7 +1256,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1476,11 +1476,11 @@ allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
+allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
-allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
@@ -1500,9 +1500,9 @@ allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
+allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 34.197.237.80;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1516,7 +1516,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
 allow 45.131.108.215;
@@ -1598,6 +1597,7 @@ allow 50.3.182.156;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
+allow 51.159.211.57;
 allow 51.195.91.124;
 allow 51.210.138.64;
 allow 51.222.142.67;
@@ -1618,6 +1618,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1639,6 +1640,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.70.19.164;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
@@ -1656,6 +1658,7 @@ allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
+allow 64.176.66.193;
 allow 64.227.115.78;
 allow 64.5.123.66;
 allow 66.146.193.33;
@@ -1687,7 +1690,6 @@ allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
-allow 82.153.138.120;
 allow 82.153.138.153;
 allow 82.153.138.182;
 allow 82.153.138.48;
@@ -1708,7 +1710,6 @@ allow 84.38.134.224;
 allow 84.38.134.225;
 allow 84.38.134.226;
 allow 84.38.134.227;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
