--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -119,6 +119,7 @@ deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
 deny 2001:b030:2422::7234;
+deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -415,7 +416,6 @@ deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
@@ -423,6 +423,7 @@ deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6c28::1;
 deny 2a05:b0c7:6cd8::1;
+deny 2a05:f480:2400:1441:5400:4ff:fed7:686a;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
@@ -433,7 +434,6 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
-deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
@@ -654,11 +654,11 @@ deny 2a0f:df00:0:255::201;
 deny 2a0f:df00:0:255::202;
 deny 2a0f:df00:0:255::203;
 deny 2a0f:df00:0:255::204;
+deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
-deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
