--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -4,8 +4,8 @@ set_real_ip_from 102.219.85.85;
 set_real_ip_from 103.106.3.94;
 set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
+set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -260,7 +260,6 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
-set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -627,9 +626,9 @@ set_real_ip_from 193.189.100.201;
 set_real_ip_from 193.189.100.202;
 set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
+set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
-set_real_ip_from 193.218.118.181;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
@@ -806,6 +805,7 @@ set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
 set_real_ip_from 2001:b030:2422::7234;
+set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
 set_real_ip_from 2001:bf0:666::666;
@@ -858,6 +858,7 @@ set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 217.160.88.146;
+set_real_ip_from 217.64.148.136;
 set_real_ip_from 23.129.64.130;
 set_real_ip_from 23.129.64.131;
 set_real_ip_from 23.129.64.132;
@@ -1237,7 +1238,6 @@ set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6841::1;
-set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
 set_real_ip_from 2a05:b0c7:6b6c::1;
@@ -1245,6 +1245,7 @@ set_real_ip_from 2a05:b0c7:6b72::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6c28::1;
 set_real_ip_from 2a05:b0c7:6cd8::1;
+set_real_ip_from 2a05:f480:2400:1441:5400:4ff:fed7:686a;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1255,7 +1256,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1476,11 +1476,11 @@ set_real_ip_from 2a0f:df00:0:255::201;
 set_real_ip_from 2a0f:df00:0:255::202;
 set_real_ip_from 2a0f:df00:0:255::203;
 set_real_ip_from 2a0f:df00:0:255::204;
+set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a0f:e586:f:f::188;
-set_real_ip_from 2a0f:e586:f:f:9491:941d:caf5:50e7;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
@@ -1500,9 +1500,9 @@ set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
+set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.197.237.80;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1516,7 +1516,6 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.130.20.250;
 set_real_ip_from 45.131.108.215;
@@ -1598,6 +1597,7 @@ set_real_ip_from 50.3.182.156;
 set_real_ip_from 51.15.249.160;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.158.115.62;
+set_real_ip_from 51.159.211.57;
 set_real_ip_from 51.195.91.124;
 set_real_ip_from 51.210.138.64;
 set_real_ip_from 51.222.142.67;
@@ -1618,6 +1618,7 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1639,6 +1640,7 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
+set_real_ip_from 52.70.19.164;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 54.224.79.94;
@@ -1656,6 +1658,7 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
+set_real_ip_from 64.176.66.193;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.5.123.66;
 set_real_ip_from 66.146.193.33;
@@ -1687,7 +1690,6 @@ set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.158;
-set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
 set_real_ip_from 82.153.138.182;
 set_real_ip_from 82.153.138.48;
@@ -1708,7 +1710,6 @@ set_real_ip_from 84.38.134.224;
 set_real_ip_from 84.38.134.225;
 set_real_ip_from 84.38.134.226;
 set_real_ip_from 84.38.134.227;
-set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
