--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -861,7 +861,7 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 217.160.88.146;
-allow 217.64.148.136;
+allow 217.64.148.135;
 allow 23.129.64.130;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -938,6 +938,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -956,6 +957,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
@@ -1508,7 +1510,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.223.43.149;
+allow 34.198.36.149;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
