--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -861,7 +861,7 @@ deny 216.73.159.75;
 deny 217.12.221.131;
 deny 217.146.2.41;
 deny 217.160.88.146;
-deny 217.64.148.136;
+deny 217.64.148.135;
 deny 23.129.64.130;
 deny 23.129.64.131;
 deny 23.129.64.132;
@@ -938,6 +938,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 23.94.36.142;
@@ -956,6 +957,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
@@ -1508,7 +1510,7 @@ deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.134;
-deny 3.223.43.149;
+deny 34.198.36.149;
 deny 35.0.127.52;
 deny 35.240.241.135;
 deny 37.1.201.144;
